<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/title_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_groupName"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_groupName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_nofill"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/value_groupName"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/title_groupName"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/title_noHp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_noHp"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/value_groupName"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/value_noHp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_nofill"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/value_noHp"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/title_noHp"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/title_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_email"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/value_noHp"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/value_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_nofill"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/value_email"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/title_email"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/button_submite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_noedge"
        android:gravity="center"
        android:text="@string/button_edit"
        android:fontFamily="@font/opensansbold"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/value_email"
        tools:layout_editor_absoluteX="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>