<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/history_list"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginHorizontal="5dp"
    android:background="@drawable/chat_bg"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/title_chat"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/title_chat_bg"
        android:fontFamily="@font/opensansbold"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/title_date"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_gName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/text_gName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_chat" />

    <TextView
        android:id="@+id/text_patientCond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/opensansbold"
        android:text="@string/text_patientCond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_chat" />

</androidx.constraintlayout.widget.ConstraintLayout>