<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title_uName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="69dp"
        android:text="@string/text_uName"
        android:fontFamily="@font/robotobold"
        android:textColor="@color/red"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="260dp"
        android:layout_height="180dp"
        android:background="@drawable/button_noedge"
        android:gravity="center_horizontal"
        android:text="@string/text_Medis"
        android:fontFamily="@font/robotobold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_uName"
        app:layout_constraintVertical_bias="0.47">
    </TextView>

    <TextView
        android:id="@+id/openChatButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:background="@drawable/button_noedge_white"
        android:text="@string/text_openMed"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:fontFamily="@font/robotobold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>